# MLS-Chat

./: .gitignore  CONTRIBUTING.md  FIXES_SUMMARY.md  LICENSE  README.md  SECURITY_AUDIT_REPORT.md
.github/workflows/: build-wasm.yml  release.yml
.opencode/agents/: architect-mls-chat.md  coder-mls-chat.md
.opencode/tasks/: final-implementation.md  mls-chat-spec-fixes.md
client/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite-env.d.ts  vite.config.ts
client/coverage/: clover.xml  coverage-final.json  index.html
client/e2e/: 01-registration.test.ts  02-group-management.test.ts  03-messaging.test.ts  04-e2e-encryption.test.ts  05-multi-device-sync.test.ts  06-full-e2e-flow.test.ts  07-realtime-websocket.test.ts
client/src/: App.tsx  index.css  main.tsx
client/src/mls/wasm/: Cargo.toml
client/src/mls/wasm/pkg/: mls_wasm.d.ts  mls_wasm.js  mls_wasm_bg.wasm  mls_wasm_bg.wasm.d.ts  package.json
client/src/mls/wasm/src/: lib.rs  provider.rs  storage.rs
diagrams/: architecture.md
docs/: DEPLOY_MINIMUM_CHAT.md  DEPLOY_STEPS_NOW.md  OPENSOURCE_STACK.md  test_ws_upgrade.sh
spec/: README.md  agent_system_prompt.md  auth_service.md  delivery_service.md  group_management.md  identity_and_passkeys.md  mls_integration.md  ui_design_system.md
supabase/: apply_schema.sql  config.toml
supabase/_shared/: cors.ts  webauthn.ts
supabase/functions/: auth_keypackage.ts  auth_login.ts  auth_register.ts
supabase/migrations/: 20260217100000_full_schema.sql  20260217110000_users_drop_display_name.sql  (+5 more)
(+94 files in other folders)
