[package]
name = "mls-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
openmls = { version = "0.7", features = ["crypto-subtle", "js"] }
openmls_basic_credential = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dependencies.getrandom]
version = "0.2"
features = ["js"]