[package]
name = "mls-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
openmls = { version = "0.7", features = ["js"] }
openmls_basic_credential = "0.4"
openmls_rust_crypto = "0.4"
openmls_traits = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
js-sys = "0.3"
console_error_panic_hook = "0.1"
hex = "0.4"
rand = "0.8"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dependencies.getrandom]
version = "0.2"
features = ["js"]